# chimedb

./: .travis.yml  README.md  pyproject.toml  setup.py
.github/workflows/: main.yml
chimedb/core/: __init__.py  _version.py  alpenhorn.py  connectdb.py  context.py  mediawiki.py  orm.py
test/: test_current_connector.py  test_decorator.py  test_sqlite.py  test_test_enable.py
