[build-system]
requires = ["setuptools>=61.0.0", "wheel", "setuptools-git-versioning"]
build-backend = "setuptools.build_meta"

[project]
name = "chimedb"
authors = [
  {name = "The CHIME Collaboration", email = "dvw@phas.ubc.ca"}
]
description = "Low-level CHIME database access"
requires-python = ">=3.10"
dynamic = ["readme", "version"]
license = {file = "LICENSE"}
dependencies = [
    "mysql-connector-python >= 9.1.0",
    "peewee >= 3.16.3",
    "sshtunnel >= 0.4.0",
    "ujson",
    "PyYAML"
]

[project.optional-dependencies]
test = [
  "pytest >= 7.0"
]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}

[tool.setuptools-git-versioning]
enabled = true

[tool.ruff]
target-version = "py310"
